Get map on page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 <body>
   <h1>Boundary Generator</h1>
+  <main>
+    <div class="map-inputs-wrapper">
+      <input type="text" placeholder="">
+      <input type="text" placeholder="">
+      <input type="text" placeholder="">
+    </div>
+    <div class="map-wrapper">
+      <div id="map"></div>
+    </div>
+  </main>
+
   <script src="js/scripts.js"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkuf6MkEiT7fH6ffIUKUfZq6qbVvyPe14&callback=initMap"
+  type="text/javascript"></script>
 </body>
 </html>
