Display boundary on map by clicking results-button

--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
     <h1>Boundary Generator</h1>
     <main>
       <div class="map-inputs-wrapper">
-        <input id="pac-input" class="controls" type="text" placeholder="Search Box">
         <div class="coordinate-input-wrapper">
           <span>1</span>
-          <input type="text" class="lat" value="103" placeholder="Latitude (Eg. 43.706787)">,
-          <input type="text" class="lng" value="-134.7067" placeholder="Longitude (Eg. -79.398385)">
+          <input type="text" class="lat" value="43.653254" placeholder="Latitude (Eg. 43.706787)">,
+          <input type="text" class="lng" value="-79.384132" placeholder="Longitude (Eg. -79.398385)">
         </div>
         <div class="coordinate-input-wrapper">
           <span>2</span>
-          <input type="text" class="lat" value="53.8" placeholder="Latitude (Eg. 43.706787)">,
-          <input type="text" class="lng" value="-39.7523306787" placeholder="Longitude (Eg. -79.398385)">
+          <input type="text" class="lat" value="43.660492" placeholder="Latitude (Eg. 43.706787)">,
+          <input type="text" class="lng" value="-79.404731" placeholder="Longitude (Eg. -79.398385)">
         </div>
         <div class="coordinate-input-wrapper">
           <span>3</span>
-          <input type="text" class="lat" value="57.78398" placeholder="Latitude (Eg. 43.706787)">,
-          <input type="text" class="lng" value="-79.77" placeholder="Longitude (Eg. -79.398385)">
+          <input type="text" class="lat" value="43.667255" placeholder="Latitude (Eg. 43.706787)">,
+          <input type="text" class="lng" value="-79.370828" placeholder="Longitude (Eg. -79.398385)">
         </div>
 
         <button id="add-coords">Add another coordinate</button>
@@ -37,8 +36,8 @@
       </div>
     </main>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkuf6MkEiT7fH6ffIUKUfZq6qbVvyPe14&callback=initMap&libraries=places"
-  type="text/javascript"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkuf6MkEiT7fH6ffIUKUfZq6qbVvyPe14&callback=initMap"type="text/javascript"></script>
 </body>
 </html>
