Add start-again button

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <div class="map-inputs-wrapper">
         <div class="coordinate-input-wrapper">
           <span>1</span>
-          <input type="text" class="lat" value="43.653254" placeholder="Latitude (Eg. 43.706787)">,
-          <input type="text" class="lng" value="-79.384132" placeholder="Longitude (Eg. -79.398385)">
+          <input type="text" class="lat" value="43.649254" placeholder="Latitude (Eg. 43.706787)">,
+          <input type="text" class="lng" value="-79.374132" placeholder="Longitude (Eg. -79.398385)">
         </div>
         <div class="coordinate-input-wrapper">
           <span>2</span>
@@ -30,6 +30,7 @@
 
         <button id="add-coords">Add another coordinate</button>
         <button id="results-button">Display Results</button>
+        <button id="start-again">Start Again</button>
       </div>
       <div class="map-wrapper">
         <div id="map"></div>
