--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>Boundary Generator</h1>
     <main>
+      <!-- map-inputs-wrapper -->
       <div class="map-inputs-wrapper">
         <div class="coordinate-input-wrapper">
           <span>1</span>
@@ -27,15 +28,21 @@
           <input type="text" class="lat" value="43.667255" placeholder="Latitude (Eg. 43.706787)">,
           <input type="text" class="lng" value="-79.370828" placeholder="Longitude (Eg. -79.398385)">
         </div>
-
         <button id="add-coords">Add another coordinate</button>
         <button id="results-button">Display Results</button>
-        <button id="start-again">Start Again</button>
-      </div>
+        <button id="remove-boundary" onClick="removePolygon();">Remove Boundary</button>
+      </div> <!-- /.map-inputs-wrapper -->
+
+      <!-- map-wrapper -->
       <div class="map-wrapper">
         <div id="map"></div>
       </div>
     </main>
+
+    <!-- footer -->
+    <footer>
+      <span>Built By: <a href="http://adamfeldmna.io" target="_blank">Adam Feldman</a></span>
+    </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="js/scripts.js"></script>
