--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
+
   <title>Boundary Generator</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
 
     <!-- footer -->
     <footer>
-      <span>Built By: <a href="http://adamfeldmna.io" target="_blank">Adam Feldman</a></span>
+      <span>Built by: <a href="http://adamfeldmna.io" target="_blank">Adam Feldman</a></span>
     </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
