--- a/index.html
+++ b/index.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://use.fontawesome.com/ba93120002.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="Create boundaries on a Google map using GPS coordinates">
+  <meta name="keywords" content="boundary, coordinates, google map, generator, gps, latitude, longitude">
+  <meta name="author" content="Adam Feldman">
   <link rel="stylesheet" href="css/styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-
-  <title>Boundary Generator</title>
+  <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
+  <title>GPS Boundary Generator</title>
 </head>
 <body>
-    <h1>Boundary Generator</h1>
+    <h1>GPS Boundary Generator</h1>
+    <h3>Create boundaries using GPS coordinates and Google Maps</h3>
     <main>
       <!-- map-inputs-wrapper -->
       <div class="map-inputs-wrapper">
+        <h2>Coordinates:</h2>
+        <span>(E.g. <span>43.706787</span>, <span>-79.398385</span>)</span>
+        <div class="upper-button-wrapper">
+          <button id="add-coords"><span>+</span> Add Coordinate</button>
+          <button id="remove-coords"><span>&#10005;</span> Remove Coordinate</button>
+        </div>
         <div class="coordinate-input-wrapper">
           <span>1</span>
           <input type="text" class="lat" value="43.649254" placeholder="Latitude (Eg. 43.706787)">,
@@ -26,12 +36,13 @@
         </div>
         <div class="coordinate-input-wrapper">
           <span>3</span>
-          <input type="text" class="lat" value="43.667255" placeholder="Latitude (Eg. 43.706787)">,
-          <input type="text" class="lng" value="-79.370828" placeholder="Longitude (Eg. -79.398385)">
+          <input type="text" class="lat" placeholder="Latitude">,
+          <input type="text" class="lng" placeholder="Longitude">
         </div>
-        <button id="add-coords">Add another coordinate</button>
-        <button id="results-button">Display Results</button>
-        <button id="remove-boundary" onClick="removePolygon();">Remove Boundary</button>
+        <div class="lower-button-wrapper">
+          <button id="results-button">Display Boundary</button>
+          <button id="remove-boundary">Remove Boundary</button>
+        </div>
       </div> <!-- /.map-inputs-wrapper -->
 
       <!-- map-wrapper -->
@@ -42,7 +53,7 @@
 
     <!-- footer -->
     <footer>
-      <span>Built by: <a href="http://adamfeldmna.io" target="_blank">Adam Feldman</a></span>
+      <span>Built by: <a href="http://adamfeldman.io" target="_blank">Adam Feldman</a></span>
     </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
