Add functionality that centres map and fits entire polygon in view

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!-- map-inputs-wrapper -->
       <div class="map-inputs-wrapper">
         <h2>Coordinates:</h2>
-        <span>(E.g. <span>43.706787</span>, <span>-79.398385</span>)</span>
+        <span>(E.g. 43.706787, -79.398385)</span>
         <div class="upper-button-wrapper">
           <button id="add-coords"><span>+</span> Add Coordinate</button>
           <button id="remove-coords"><span>&#10005;</span> Remove Coordinate</button>
@@ -36,8 +36,8 @@
         </div>
         <div class="coordinate-input-wrapper">
           <span>3</span>
-          <input type="text" class="lat" placeholder="Latitude">,
-          <input type="text" class="lng" placeholder="Longitude">
+          <input type="text" class="lat" value="43.680492" placeholder="Latitude">,
+          <input type="text" class="lng" value="-79.404730" placeholder="Longitude">
         </div>
         <div class="lower-button-wrapper">
           <button id="results-button">Display Boundary</button>
