Add active and .inactive buttons

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="lower-button-wrapper">
           <button id="results-button">Display Boundary</button>
-          <button id="remove-boundary">Remove Boundary</button>
+          <button id="remove-boundary" class="inactive">Remove Boundary</button>
         </div>
       </div> <!-- /.map-inputs-wrapper -->
 
