Add remove coordinate functionality

--- a/index.html
+++ b/index.html
@@ -26,24 +26,24 @@
         </div>
         <div class="coordinate-input-wrapper">
           <span>1</span>
-          <input type="text" class="lat" value="43.649254" placeholder="Latitude (Eg. 43.706787)">
+          <input type="text" class="lat" value="43.649254" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.374132" placeholder="Longitude (Eg. -79.398385)">
+          <input type="text" class="lng" value="-79.374132" placeholder="Longitude" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>2</span>
-          <input type="text" class="lat" value="43.660492" placeholder="Latitude (Eg. 43.706787)">
+          <input type="text" class="lat" value="43.660492" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.404731" placeholder="Longitude (Eg. -79.398385)">
+          <input type="text" class="lng" value="-79.404731" placeholder="Longitude" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>3</span>
-          <input type="text" class="lat" value="43.680492" placeholder="Latitude">
+          <input type="text" class="lat" value="43.680492" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.404730" placeholder="Longitude">
+          <input type="text" class="lng" value="-79.404730" placeholder="Longitude" required>
         </div>
         <div class="lower-button-wrapper">
-          <button id="results-button">Display Boundary</button>
+          <button id="display-boundary">Display Boundary</button>
           <button id="remove-boundary" class="inactive">Remove Boundary</button>
         </div>
       </div> <!-- /.map-inputs-wrapper -->
