Fix bug that prevented boundary from displaying on map

--- a/index.html
+++ b/index.html
@@ -11,19 +11,6 @@
   <link rel="stylesheet" href="css/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" sizes="57x57" href="images/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="images/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="images/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="images/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="images/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="images/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon-180x180.png">
-  <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="images/android-chrome-192x192.png" sizes="192x192">
   <title>GPS Boundary Generator</title>
 </head>
 <body>
@@ -40,21 +27,21 @@
         </div>
         <div class="coordinate-input-wrapper">
           <span>1</span>
-          <input type="text" class="lat" value="43.649254" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.374132" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>2</span>
-          <input type="text" class="lat" value="43.660492" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.404731" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>3</span>
-          <input type="text" class="lat" value="43.680492" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.404730" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" required>
         </div>
         <div class="lower-button-wrapper">
           <button id="display-boundary">Display Boundary</button>
@@ -73,7 +60,7 @@
       <span>Built by: <a href="http://adamfeldman.io" target="_blank">Adam Feldman</a></span>
     </footer>
 
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts-min.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkuf6MkEiT7fH6ffIUKUfZq6qbVvyPe14&callback=initMap"type="text/javascript"></script>
 </body>
 </html>
