--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1>GPS Boundary Generator</h1>
     <h3>Create boundaries using GPS coordinates and Google Maps</h3>
+    <span>Built by: <a href="http://adamfeldman.io" target="_blank">Adam Feldman</a></span>
     <main>
       <!-- map-inputs-wrapper -->
       <div class="map-inputs-wrapper">
