Update functionality when input value missing

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </main>
 
-  <script src="js/scripts-min.js"></script>
+  <script src="js/scripts.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkuf6MkEiT7fH6ffIUKUfZq6qbVvyPe14&callback=initMap"type="text/javascript"></script>
 </body>
 </html>
