Fix Safari bug where .reminder was overflowing from its wrapper

--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
         </div>
         <div class="coordinate-input-wrapper">
           <span>1</span>
-          <input type="text" class="lat" value="43.706787" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.398385" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>2</span>
-          <input type="text" class="lat" value="43.756787" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.398385" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>3</span>
-          <input type="text" class="lat" value="43.796787" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" required>
           <span>,</span>
-          <input type="text" class="lng" value="-79.508385" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" required>
         </div>
         <div class="lower-button-wrapper">
           <button id="display-boundary">Display Boundary</button>
@@ -57,7 +57,7 @@
       </div>
     </main>
 
-  <script src="js/scripts.js"></script>
+  <script src="js/scripts-min.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDkuf6MkEiT7fH6ffIUKUfZq6qbVvyPe14&callback=initMap"type="text/javascript"></script>
 </body>
 </html>
