--- a/index.html
+++ b/index.html
@@ -38,23 +38,27 @@
           <button id="add-coord"><span>+</span> Add Coordinate</button>
           <button id="remove-coord"><span>&#10005;</span> Remove Coordinate</button>
         </div>
+        <form action="">
+          <input type="text" id="geocodeInput">
+          <input type="submit" id="geocodeSubmit">
+        </form>
         <div class="coordinate-input-wrapper">
           <span>1</span>
-          <input type="text" class="lat" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" value="43.701187" required>
           <span>,</span>
-          <input type="text" class="lng" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" value="-79.398885" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>2</span>
-          <input type="text" class="lat" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" value="43.705787" required>
           <span>,</span>
-          <input type="text" class="lng" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" value="-79.395585" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>3</span>
-          <input type="text" class="lat" placeholder="Latitude" required>
+          <input type="text" class="lat" placeholder="Latitude" value="43.701987" required>
           <span>,</span>
-          <input type="text" class="lng" placeholder="Longitude" required>
+          <input type="text" class="lng" placeholder="Longitude" value="-79.391185" required>
         </div>
         <div class="lower-button-wrapper">
           <button id="display-boundary">Display Boundary</button>
