Remove placeholders from inputs

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
       <div class="inputs-container">
         <div class="coordinate-input-wrapper">
           <span>1</span>
-          <input type="text" class="geo" placeholder="Montreal, Quebec" value="Montreal, Quebec" required>
+          <input type="text" class="geo" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>2</span>
-          <input type="text" class="geo" placeholder="30 Rockefeller, New York, NY" value="30 Rockefeller, New York, NY" required>
+          <input type="text" class="geo" required>
         </div>
         <div class="coordinate-input-wrapper">
           <span>3</span>
-          <input type="text" class="geo" placeholder="43.642371, -79.387048" value="43.642371, -79.387048" required>
+          <input type="text" class="geo" required>
         </div>
       </div>
       
